--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>groupId</groupId>
     <artifactId>uploadimage4blog</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>v0.1</version>
 
     <properties>
         <project.buile.sourceEncoding>UTF-8</project.buile.sourceEncoding>
